feat: 逃逸分析，数组对象不一定在堆里面。kafka维护消费信息topic，侧边栏排序